# where-to-eat

./: .gitignore  README.md  main.py  requirements.txt
.github/workflows/: docker.yaml  k8s.yaml
.helm/: Chart.yaml  values.yaml
.helm/charts/nlp-service/: Chart.yaml  values.yaml
.helm/charts/nlp-service/templates/: deployment.yaml
.helm/charts/telegram-bot/: Chart.yaml  values.yaml
.helm/charts/telegram-bot/templates/: deployment.yaml  secret.yaml
nlp-service/: .dockerignore  .gitignore  Dockerfile  common.py  env.yaml  main.py  requirements.txt
notebooks/: GeoReviews.ipynb  fill_database.py  main.py  pyproject.toml  search.ipynb  search.py  semantic-search.py
python-service/: common.py  main.py  requirements.txt
telegram-bot/: config.py  main.py  rabbitmq_tools.py  tg_bot_tools.py
telegram-bot/aiogram_bot/: __init__.py  telegram_bot.py
telegram-bot/rabbitmq/: __init__.py  rmq_listener.py  rmq_sender.py
telegram_bot/: .dockerignore  Dockerfile  __init__.py  config.py  main.py  rabbitmq_tools.py  scripts_test.py
telegram_bot/aiogram_bot/: __init__.py  telegram_bot.py  telegram_repository.py
telegram_bot/rabbitmq/: __init__.py  rmq_listener.py  rmq_sender.py
telegram_user_interaction/: requirements.txt  telegram_bot.py
