[tool.poetry]
name = "nlp-service"
version = "0.1.0"
description = ""
authors = ["Mikhail Elenskii <elenskii-mikhail@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qdrant-client = {extras = ["fastembed"], version = "^1.6.4"}
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
